# oscr

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
oscr/: __main__.py  bias.py  clients.py  models.py  utils.py
oscr/clients/: discoverorg.py  linkedin.py  salesforce.py
