[tool.poetry]
name = "oscr"
version = "0.1.0"
description = "The Opinionated System for Contact Retrieval."
authors = ["Elliott Maguire <e.maguire@smartrecruiters.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
simple-salesforce = "^0.74.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = "=19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
